--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Discover hidden places in the world around you</h1>
     </div>
     <div class="download">
-      <a href="_blank">Download Excursion (coming soon)</a>
+      <a href="_blank">Download Excursion (coming soon!)</a>
     </div>
     <div class="videoFrame">
 
@@ -25,7 +25,7 @@
       </div>
       <h2>Coming Soon for iPhone and Android</h2>
       <div class="download">
-        <a href="_blank">Download Excursion (coming soon)</a>
+        <a href="_blank">Download Excursion (coming soon!)</a>
       </div>
       <div class="copyright">
 
