Première version fonctionnelle

--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
       <h1>Discover hidden places in the world around you</h1>
     </div>
     <div class="download">
-      <a href="_blank">Download Excursion (coming soon!)</a>
+      <a href="" target="_blank">Download Excursion (coming soon!)</a>
     </div>
     <div class="videoFrame">
-
+      <video src="./resources/videos/excursion.mp4" autoplay="yes" loop="yes">Video not supported</video>
     </div>
     <div class="subtitle">
       <h2>Your personal travel guide</h2>
     </div>
     <div class="purpose">
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-      <div class="">
-
-      </div>
+      <div><img src="./resources/images/camp.jpg" /></div>
+      <div><img src="./resources/images/phone.png" /></div>
       <h2>Coming Soon for iPhone and Android</h2>
       <div class="download">
-        <a href="_blank">Download Excursion (coming soon!)</a>
+        <a href="" target="_blank">Download Excursion (coming soon!)</a>
       </div>
       <div class="copyright">
-
+        @ Excursion
       </div>
     </div>
   </body>
